--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde_json = "1.0"
 once_cell = "1.5"
 log = "0.4"
 pretty_env_logger = "0.4"
+gethostname = "0.2.3"
+clap = { version = "3.2.8", features = ["derive"] }
