--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ log = "0.4"
 pretty_env_logger = "0.4"
 gethostname = "0.2.3"
 clap = { version = "3.2.8", features = ["derive"] }
+hyper = { version = "0.14", features = ["tcp", "http1", "server", "stream"] }
+tokio-util = { version = "0.7.3", features = ["codec"] }
+rust-embed = { version = "6.4.0", features = ["interpolate-folder-path"] }
